@@ -25,6 +25,8 @@
 * Added API panel_config_click_button_new() to configure mouse gestures.
 * Added "icon-size-changed" signal to LXPanel which is emitted when icons
     size in configuration dialog was changed.
+* Improved lxpanel_image_new_for_icon() API to follow panel icons size
+    changes, not only theme changes.
 
 0.7.2
 -------------------------------------------------------------------------
